--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <audio id = "beep" type = "audio/mp3">
         <source src = "https://www.myinstants.com/media/sounds/touhou-pause-sfx.mp3" />
       </audio>
+    <a href = "http://moe-thae-nwe.github.io/home">Browse other tools</a>
     <script src = "script.js" type = "text/babel"></script>
   </body>
 </html>
